[[source]]
url = "https://pypi.python.org/simple"
verify_ssl = true
name = "pypi"

[tool.poetry]
name = "Patsy"
version = "1.0.0"
description = "Transforms and stores help system message content for future processing."
authors = ["Chris Lovering <chris.lovering.95@gmail.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.11.*"

alembic = {version = "1.9.1", extras = ["tz"]}
SQLAlchemy = {version = "1.4.45", extras = ["asyncio", "postgresql_asyncpg"]}
fastapi = "0.88.0"
uvicorn = {extras = ["standard"], version = "0.20.0"}

[tool.poetry.group.dev.dependencies]
taskipy = "1.10.3"
poetry-plugin-export = "1.2.0"

[tool.poetry.group.linting.dependencies]
flake8 = "6.0.0"
flake8-annotations = "2.9.1"
flake8-bugbear = "22.12.6"
flake8-docstrings = "1.6"
flake8-isort = "5.0.3"
flake8-string-format = "0.3.0"
flake8-tidy-imports = "4.8.0"
flake8-todo = "0.7"
pep8-naming = "0.13.2"
pre-commit = "2.20.0"
mypy = "0.991"
sqlalchemy2-stubs = "0.0.2a29"
isort = "5.11.1"
black = "22.12.0"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
revision = "alembic revision --autogenerate -m"
migrate = "alembic upgrade head"
black = "black migrations patsy"
isort = "isort ."

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin, pydantic.mypy"
strict = true
implicit_reexport = true
show_error_codes = true
# Additional error codes which have to be enabled by name
# See: https://mypy.readthedocs.io/en/stable/error_code_list2.html
enable_error_code = "ignore-without-code"

[tool.isort]
profile = "black"
order_by_type = false
line_length = 120
known_first_party = ["patsy"]

[tool.black]
line-length = 120
