[[source]]
url = "https://pypi.python.org/simple"
verify_ssl = true
name = "pypi"

[tool.poetry]
name = "Patsy"
version = "1.0.0"
description = "Transforms and stores help system message content for future processing."
authors = ["Chris Lovering <chris.lovering.95@gmail.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.11.*"

alembic = {version = "1.10.1", extras = ["tz"]}
fastapi = "0.92.0"
SQLAlchemy = {version = "2.0.4", extras = ["asyncio", "postgresql_asyncpg"]}
uvicorn = {extras = ["standard"], version = "0.20.0"}

[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "1.3.0"
taskipy = "1.10.3"

[tool.poetry.group.linting.dependencies]
black = "23.1.0"
flake8 = "6.0.0"
flake8-annotations = "3.0.0"
flake8-bugbear = "23.2.13"
flake8-docstrings = "1.7.0"
flake8-isort = "6.0.0"
flake8-string-format = "0.3.0"
flake8-tidy-imports = "4.8.0"
flake8-todo = "0.7"
isort = "5.12.0"
mypy = "1.0.1"
pep8-naming = "0.13.3"
pre-commit = "3.0.4"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
revision = "alembic revision --autogenerate -m"
migrate = "alembic upgrade head"
black = "black migrations patsy"
isort = "isort ."

[tool.mypy]
plugins = "pydantic.mypy"
strict = true
implicit_reexport = true
show_error_codes = true
# Additional error codes which have to be enabled by name
# See: https://mypy.readthedocs.io/en/stable/error_code_list2.html
enable_error_code = "ignore-without-code"

[tool.isort]
profile = "black"
order_by_type = false
line_length = 120
known_first_party = ["patsy"]

[tool.black]
line-length = 120
